--- a/Stuff in the Docs.ipynb
+++ b/Stuff in the Docs.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "from selenium import webdriver\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "#hello "
    ]
   },
   {
@@ -97,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
