--- a/Jury Rigged Scholar Scraper.ipynb
+++ b/Jury Rigged Scholar Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -140,7 +140,6 @@
      "text": [
       "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
       "Authors\n",
-      "Ian I Mitroff, Murat C Alpaslan\n",
       "Publication date\n",
       "Publisher\n",
       "Description\n",
@@ -187,8 +186,9 @@
     "citation = {\n",
     "    \"Authors\" : \"\",\n",
     "    \"Title\" : \"\",\n",
-    "    \"Date\" : \"\",\n",
-    "    \"Publisher\": \"\"\n",
+    "    \"Publication Date\" : \"\",\n",
+    "    \"Publisher\": \"\",\n",
+    "    \"Description\": \"\"\n",
     "}\n",
     "\n",
     "for data in citation_table_data_objects:\n",
@@ -199,7 +199,6 @@
     "    \n",
     "    if data_category.text == \"Authors\":\n",
     "        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
-    "        print(data_field.text)\n",
     "        citation[\"Authors\"] = data_field.text\n",
     "    elif data_category.text == \"Publication date\":\n",
     "        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
@@ -207,6 +206,12 @@
     "    elif data_category.text == \"Publisher\":\n",
     "        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "        citation[\"Publisher\"] = data_field.text\n",
+    "    elif data_category.text == \"Description\":\n",
+    "        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
+    "        citation[\"Description\"] = data_field.text\n",
+    "    elif data_category.text == \"Description\":\n",
+    "        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
+    "        citation[\"Description\"] = data_field.text\n",
     "\n",
     "\n",
     "# citation_table_data = [data.text for data in citation_table_data_objects]\n",
@@ -214,8 +219,8 @@
     "#     print(data)\n",
     "\n",
     "# if citation_table.find_elements_by_xpath('//div/div')\n",
-    "# pub_title = driver.find_element_by_class_name('gsc_vcd_title_link')\n",
-    "# pub_title = pub_title.text\n",
+    "pub_title = driver.find_element_by_class_name('gsc_vcd_title_link')\n",
+    "citation[\"Title\"] = pub_title.text\n",
     "\n",
     "\n",
     "# pub_date = driver.find_element_by_xpath('//*[@id=\"gsc_vcd_table\"]/div[2]/div[2]')\n",
@@ -272,23 +277,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ian I Mitroff, Murat C Alpaslan\n",
-      "2003/4/1\n",
-      "Harvard Business School Pub.\n"
+      "Preparing for evil\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n"
      ]
     }
    ],
    "source": [
+    "print(citation['Title'])\n",
     "print(citation['Authors'])\n",
     "print(citation['Date'])\n",
-    "print(citation['Publisher'])"
+    "print(citation['Publisher'])\n",
+    "print(citation['Description'])"
    ]
   },
   {
@@ -614,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
