--- a/Google Scholar Scraper.ipynb
+++ b/Google Scholar Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,31 +100,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "def google_scholar_scraper(name):\n",
+    "def google_scholar_scraper(record):\n",
     "    \n",
     "    driver = webdriver.Chrome()\n",
     "    driver.implicitly_wait(10) # seconds loading implicitly\n",
     "    google_scholar = \"https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\"\n",
     "    #Set driver to go to start_page and search a given name with valid scholar profile\n",
     "    driver.get(google_scholar)\n",
-    "    print(driver.current_url)\n",
     "    #Instatiate the webdriver and set to implicitly wait for page objects to load\n",
     "\n",
-    "    search_bar = driver.find_element_by_class_name('gs_in_txt')\n",
-    "    search_bar.send_keys(name)\n",
+    "    profile_found = False\n",
+    "    \n",
+    "    search_bar = driver.find_element_by_class_name('gs_in_txt')    \n",
+    "    search_bar.send_keys(\"\\\"\" + record.faculty + \"\\\"\" + \" CSUN\")\n",
     "    search_bar.send_keys(Keys.ENTER)\n",
     "    \n",
-    "    if driver.find_elements_by_xpath('//*[@id=\"gsc_sa_ccl\"]/div/p[1]'):\n",
-    "        print(\"No Search Results Found\")\n",
-    "        \n",
+    "    if not driver.find_elements_by_xpath('//*[@id=\"gsc_sa_ccl\"]/div/p[1]'):\n",
+    "        profile_found = True\n",
     "    else:\n",
-    "        if name ==\n",
+    "        search_bar = driver.find_element_by_class_name('gs_in_txt')\n",
+    "        search_bar.clear()\n",
+    "        time.sleep(1)\n",
+    "        search_bar.send_keys(\"\\\"\" + record.faculty + \"\\\"\" + \" Northridge\")\n",
+    "        search_bar.send_keys(Keys.ENTER)\n",
+    "        if not driver.find_elements_by_xpath('//*[@id=\"gsc_sa_ccl\"]/div/p[1]'):\n",
+    "            profile_found = True\n",
+    "        else:\n",
+    "            driver.close()\n",
+    "        \n",
+    "    if profile_found:\n",
     "        #Set driver to click the first profile given as a search result. Will need to be modified to be more general later.\n",
     "        view_profile_link = driver.find_element_by_xpath('//*[@id=\"gsc_sa_ccl\"]/div[1]/div/div/h3/a')\n",
     "        view_profile_link.click() \n",
@@ -135,7 +145,7 @@
     "\n",
     "        while not gs_bpf_wrapper.get_attribute(\"disabled\"):\n",
     "            gs_bpf_wrapper.click()\n",
-    "            time.sleep(7)\n",
+    "            time.sleep(3)\n",
     "\n",
     "        #pull the first citation for the page\n",
     "        view_citation_links = driver.find_elements_by_class_name('gsc_a_at')\n",
@@ -149,6 +159,8 @@
     "        patent_file = open('google_scholar_patents.txt', \"a\")\n",
     "\n",
     "        for link in view_citation_links:\n",
+    "            \n",
+    "            not_his_paper = False\n",
     "\n",
     "            title = link.text\n",
     "\n",
@@ -194,6 +206,8 @@
     "                    if data_category.text == \"Authors\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Authors\"] = data_field.text\n",
+    "                        if not record.faculty in data_field.text:\n",
+    "                            not_his_paper = True\n",
     "                    elif data_category.text == \"Publication date\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Date\"] = data_field.text\n",
@@ -216,10 +230,12 @@
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Pages\"] = data_field.text\n",
     "                    i = i + 1\n",
-    "\n",
-    "                citation_record = name + \"|\" + citation['Title'] + \"| \" + citation['Authors'] + \"| \" + citation['Date'] + \"| \" + citation['Journal'] + \"| \" + citation['Volume'] + \"| \" + citation['Issue'] + \"| \" + citation['Pages'] + \"| \" + citation['Publisher'] + \"| \" + citation['Description'] + \"\\n\" \n",
+    "                    \n",
+    "                #if not not_his_paper:\n",
+    "                \n",
+    "                # remember to re-indent into the if statement\n",
+    "                citation_record = record.faculty + \"|\" + citation['Title'] + \"| \" + citation['Authors'] + \"| \" + citation['Date'] + \"| \" + citation['Journal'] + \"| \" + citation['Volume'] + \"| \" + citation['Issue'] + \"| \" + citation['Pages'] + \"| \" + citation['Publisher'] + \"| \" + citation['Description'] + \"\\n\" \n",
     "                citation_file.write(citation_record)\n",
-    "\n",
     "\n",
     "            elif data_category.text == \"Inventors\":\n",
     "\n",
@@ -253,13 +269,16 @@
     "\n",
     "                    # this is where we would store this record in a pandas dataframe\n",
     "                    i += 1\n",
-    "\n",
-    "                patent_record = name + \"|\" + patent['Title'] + \"| \" + patent['Inventors'] + \"| \" + patent['Date'] + \"| \" + patent['Patent Office'] + \"| \" + patent['Description'] + \"| \" + patent['Application Number'] + \"| \" + patent['Patent Number'] + \"\\n\" \n",
+    "                    \n",
+    "                #if not not_his_paper:\n",
+    "                \n",
+    "                # remember to re-indent into the if statement\n",
+    "                patent_record = record.faculty + \"|\" + patent['Title'] + \"| \" + patent['Inventors'] + \"| \" + patent['Date'] + \"| \" + patent['Patent Office'] + \"| \" + patent['Description'] + \"| \" + patent['Application Number'] + \"| \" + patent['Patent Number'] + \"\\n\" \n",
     "                patent_file.write(patent_record)\n",
     "\n",
     "\n",
-    "            else:\n",
-    "                other.append(\"Error: Publication \", i , \" did not get captured by program; new decision tree required.\")\n",
+    "            elif not_his_paper:\n",
+    "                print(\"Error: Publication \", i , \" did not get captured by program; new decision tree required.\")\n",
     "\n",
     "            close_table = driver.find_element_by_id(\"gs_md_cita-d-x\")     \n",
     "            close_table.click()\n",
@@ -268,33 +287,18 @@
     "        citation_file.close()\n",
     "        patent_file.close()    \n",
     "        driver.close()\n",
-    "\n",
-    "        if len(other) > 0:\n",
-    "            for thing in other:\n",
-    "                print(thing)"
+    "    else:\n",
+    "        f = open(\"google_scholar_no_results.csv\", \"a\")\n",
+    "        f.write(record.faculty + \",\")\n",
+    "        f.write(record.college + \",\")\n",
+    "        f.write(record.department + \",\")\n",
+    "        f.write(record.url + \"\\n\")\n",
+    "        f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
-      "Not in an infinite loop\n"
-     ]
-    }
-   ],
-   "source": [
-    "google_scholar_scraper(\"Bruce Shapiro\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +391,7 @@
        "4   https://www.csun.edu/humanities/gender-womens...  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,39 +403,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
-      "No Search Results Found\n",
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
-      "No Search Results Found\n",
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n",
-      "No Search Results Found\n",
       "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "google_scholar_scraper(\"Bruce Shapiro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'send_keys'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-dbcc53d67265>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mgoogle_scholar_scraper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaculty\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-49-35ceb815a6f6>\u001b[0m in \u001b[0;36mgoogle_scholar_scraper\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m    155\u001b[0m             \u001b[0mclose_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"gs_md_cita-d-x\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m             \u001b[0mclose_table\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 157\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m         \u001b[0mcitation_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-e880eee9ff3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mgoogle_scholar_scraper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-31-2d4f0443b680>\u001b[0m in \u001b[0;36mgoogle_scholar_scraper\u001b[0;34m(record)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0msearch_bar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_class_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gs_in_txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0msearch_bar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\\"\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrecord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaculty\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\\"\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" CSUN\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0msearch_bar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mENTER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'send_keys'"
      ]
     }
    ],
    "source": [
     "for i in range(view_content.shape[0]):\n",
-    "    google_scholar_scraper(view_content.iloc[i].faculty)"
+    "    google_scholar_scraper(view_content.iloc[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = \"My name is Jorge Martinez\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "not_his_paper = True\n",
+    "if \"Jorge\" in data:\n",
+    "    not_his_paper = False\n",
+    "print(not_his_paper)"
    ]
   },
   {
