--- a/Google Scholar Scraper.ipynb
+++ b/Google Scholar Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -185,6 +185,7 @@
     "            \"Application Number\": \"\",\n",
     "            \"Patent Number\": \"\"\n",
     "            }\n",
+    "            inventors = \"\"\n",
     "\n",
     "            link.click()\n",
     "\n",
@@ -206,7 +207,7 @@
     "                    if data_category.text == \"Authors\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Authors\"] = data_field.text\n",
-    "                        if not record.faculty in data_field.text:\n",
+    "                        if (not record.faculty in data_field.text) or ():\n",
     "                            not_his_paper = True\n",
     "                    elif data_category.text == \"Publication date\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
@@ -215,7 +216,13 @@
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Publisher\"] = data_field.text\n",
     "                    elif data_category.text == \"Description\":\n",
+    "                        # this line of code grabs the description\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
+    "                        \n",
+    "                        # here is where we want to go through the description and\n",
+    "                        # replace every instance of \"\\n\" with \" \"\n",
+    "                        \n",
+    "                        # saves the description into the dictionary\n",
     "                        citation[\"Description\"] = data_field.text\n",
     "                    elif data_category.text == \"Journal\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
@@ -234,7 +241,7 @@
     "                #if not not_his_paper:\n",
     "                \n",
     "                # remember to re-indent into the if statement\n",
-    "                citation_record = record.faculty + \"|\" + citation['Title'] + \"| \" + citation['Authors'] + \"| \" + citation['Date'] + \"| \" + citation['Journal'] + \"| \" + citation['Volume'] + \"| \" + citation['Issue'] + \"| \" + citation['Pages'] + \"| \" + citation['Publisher'] + \"| \" + citation['Description'] + \"\\n\" \n",
+    "                citation_record = record.faculty + \"|\" + citation['Title'] + \"|\" + citation['Authors'] + \"|\" + citation['Date'] + \"|\" + citation['Journal'] + \"|\" + citation['Volume'] + \"|\" + citation['Issue'] + \"|\" + citation['Pages'] + \"|\" + citation['Publisher'] + \"|\" + citation['Description'] + \"\\n\"\n",
     "                citation_file.write(citation_record)\n",
     "\n",
     "            elif data_category.text == \"Inventors\":\n",
@@ -250,7 +257,7 @@
     "\n",
     "                    if data_category.text == \"Inventors\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
-    "                        patent[\"Inventors\"] = data_field.text\n",
+    "                        inventors = data_field.text\n",
     "                    elif data_category.text == \"Publication date\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        patent[\"Date\"] = data_field.text\n",
@@ -273,7 +280,7 @@
     "                #if not not_his_paper:\n",
     "                \n",
     "                # remember to re-indent into the if statement\n",
-    "                patent_record = record.faculty + \"|\" + patent['Title'] + \"| \" + patent['Inventors'] + \"| \" + patent['Date'] + \"| \" + patent['Patent Office'] + \"| \" + patent['Description'] + \"| \" + patent['Application Number'] + \"| \" + patent['Patent Number'] + \"\\n\" \n",
+    "                patent_record = record.faculty + \"|\" + patent['Title'] + \"|\" + patent['Inventors'] + \"|\" + patent['Date'] + \"|\" + patent['Patent Office'] + \"|\" + patent['Description'] + \"|\" + patent['Application Number'] + \"|\" + patent['Patent Number'] + \"\\n\"\n",
     "                patent_file.write(patent_record)\n",
     "\n",
     "\n",
@@ -298,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +398,7 @@
        "4   https://www.csun.edu/humanities/gender-womens...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,41 +410,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://scholar.google.com/citations?hl=en&view_op=search_authors&mauthors=&btnG=\n"
-     ]
+     "data": {
+      "text/plain": [
+       "faculty                                        Nanci Carr \n",
+       "college                  College of Business and Economics\n",
+       "department                      Department of Business Law\n",
+       "url            https://www.csun.edu/blaw/faculty-directory\n",
+       "Name: 95, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "google_scholar_scraper(\"Bruce Shapiro\")"
+    "view_content.iloc[95]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'send_keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-e880eee9ff3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mgoogle_scholar_scraper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mview_content\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-31-2d4f0443b680>\u001b[0m in \u001b[0;36mgoogle_scholar_scraper\u001b[0;34m(record)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0msearch_bar\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_class_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'gs_in_txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0msearch_bar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\\"\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrecord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfaculty\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"\\\"\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" CSUN\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0msearch_bar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_keys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mENTER\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'send_keys'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(view_content.shape[0]):\n",
+    "google_scholar_scraper(view_content.iloc[95])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(96,view_content.shape[0]):\n",
     "    google_scholar_scraper(view_content.iloc[i])"
    ]
   },
