--- a/Google Scholar Scraper.ipynb
+++ b/Google Scholar Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,64 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "options = webdriver.ChromeOptions()\n",
     "options.add_argument(\"download.default_directory=\" + os.getcwd() + \"/downloads\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Use pandas create dataframe (df) object that will store the data\n",
-    "columns = ['name','paper_type','citation','url','abstract','title','collaborators']\n",
-    "citations = pd.DataFrame()\n",
-    "#Place the list of names generated previously in the project into the df object\n",
-    "citations"
    ]
   },
   {
@@ -100,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -218,12 +166,17 @@
     "                    elif data_category.text == \"Description\":\n",
     "                        # this line of code grabs the description\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
+    "                        data = data_field.text\n",
     "                        \n",
     "                        # here is where we want to go through the description and\n",
     "                        # replace every instance of \"\\n\" with \" \"\n",
-    "                        \n",
+    "                        desc = data.split(\"\\n\")\n",
+    "                        description = \"\"\n",
+    "                        for piece in desc:\n",
+    "                            description += piece + \" \"\n",
+    "                            \n",
     "                        # saves the description into the dictionary\n",
-    "                        citation[\"Description\"] = data_field.text\n",
+    "                        citation[\"Description\"] = description\n",
     "                    elif data_category.text == \"Journal\":\n",
     "                        data_field = data.find_element_by_class_name(\"gsc_vcd_value\")\n",
     "                        citation[\"Journal\"] = data_field.text\n",
@@ -296,7 +249,7 @@
     "        driver.close()\n",
     "    else:\n",
     "        f = open(\"google_scholar_no_results.csv\", \"a\")\n",
-    "        f.write(record.faculty + \",\")\n",
+    "        f.write(record.faculty.strip() + \",\")\n",
     "        f.write(record.college + \",\")\n",
     "        f.write(record.department + \",\")\n",
     "        f.write(record.url + \"\\n\")\n",
@@ -305,112 +258,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>faculty</th>\n",
-       "      <th>college</th>\n",
-       "      <th>department</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sandor Samuels</td>\n",
-       "      <td>College of Humanities</td>\n",
-       "      <td>Department of Gender's &amp; Women's Studies</td>\n",
-       "      <td>https://www.csun.edu/humanities/gender-womens...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Kurt Saunders</td>\n",
-       "      <td>College of Humanities</td>\n",
-       "      <td>Department of Gender's &amp; Women's Studies</td>\n",
-       "      <td>https://www.csun.edu/humanities/gender-womens...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Hilary Silvia-Goldberg</td>\n",
-       "      <td>College of Humanities</td>\n",
-       "      <td>Department of Gender's &amp; Women's Studies</td>\n",
-       "      <td>https://www.csun.edu/humanities/gender-womens...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Melanie Williams</td>\n",
-       "      <td>College of Humanities</td>\n",
-       "      <td>Department of Gender's &amp; Women's Studies</td>\n",
-       "      <td>https://www.csun.edu/humanities/gender-womens...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Gregory Young</td>\n",
-       "      <td>College of Humanities</td>\n",
-       "      <td>Department of Gender's &amp; Women's Studies</td>\n",
-       "      <td>https://www.csun.edu/humanities/gender-womens...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  faculty                 college  \\\n",
-       "0          Sandor Samuels   College of Humanities   \n",
-       "1           Kurt Saunders   College of Humanities   \n",
-       "2  Hilary Silvia-Goldberg   College of Humanities   \n",
-       "3        Melanie Williams   College of Humanities   \n",
-       "4           Gregory Young   College of Humanities   \n",
-       "\n",
-       "                                  department  \\\n",
-       "0   Department of Gender's & Women's Studies   \n",
-       "1   Department of Gender's & Women's Studies   \n",
-       "2   Department of Gender's & Women's Studies   \n",
-       "3   Department of Gender's & Women's Studies   \n",
-       "4   Department of Gender's & Women's Studies   \n",
-       "\n",
-       "                                                 url  \n",
-       "0   https://www.csun.edu/humanities/gender-womens...  \n",
-       "1   https://www.csun.edu/humanities/gender-womens...  \n",
-       "2   https://www.csun.edu/humanities/gender-womens...  \n",
-       "3   https://www.csun.edu/humanities/gender-womens...  \n",
-       "4   https://www.csun.edu/humanities/gender-womens...  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['faculty', 'college', 'department', 'url'], dtype='object')\n"
+     ]
     }
    ],
    "source": [
     "view_content = pd.read_csv(\"view_content.csv\")\n",
-    "view_content.head()"
+    "view_content.head()\n",
+    "print(view_content.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +290,7 @@
        "Name: 95, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,20 +301,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "google_scholar_scraper(view_content.iloc[95])"
+    "google_scholar_scraper(view_content.iloc[15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(96,view_content.shape[0]):\n",
+    "for i in range(view_content.shape[0]):\n",
     "    google_scholar_scraper(view_content.iloc[i])"
    ]
   },
@@ -493,18 +360,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
